--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,9 +26,20 @@
         <url-pattern>/</url-pattern>
 
     </servlet-mapping>
-
-
-
+    <filter>
+        <filter-name>encoding-filter</filter-name>
+        <filter-class>
+            org.springframework.web.filter.CharacterEncodingFilter
+        </filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encoding-filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!-- Creates the Spring Container shared by all Servlets and Filters -->
     <listener>
@@ -46,30 +57,4 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-    <servlet>
-        <servlet-name>ConnectorServlet</servlet-name>
-        <servlet-class>com.ckfinder.connector.ConnectorServlet</servlet-class>
-        <init-param>
-            <description>
-                Path to configuration file can be relative path inside application,
-                absolute path on local file system or UNC path.
-            </description>
-            <param-name>XMLConfig</param-name>
-            <param-value>/WEB-INF/config.xml</param-value>
-        </init-param>
-        <init-param>
-            <param-name>debug</param-name>
-            <param-value>false</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ConnectorServlet</servlet-name>
-        <url-pattern>
-            /resources/ckfinder/core/connector/java/connector.java
-        </url-pattern>
-    </servlet-mapping>
-
-
 </web-app>
