--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <plugin>
+	  	<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+  		<configuration>
+	  	         <path>/</path>
+		</configuration>
+  	    </plugin>
 
 
             <plugin>
